--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "framer-motion": "^3.2.2-rc.1",
@@ -49,7 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
-  }
+  "devDependencies": {}
 }
